# mlops2_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config  data.dvc  gb.joblib.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
