[tool.poetry]
name = "MLOps project"
version = "0.1.0"
description = ""
authors = ["arl20 <https://github.com/arl20>"]
[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
numpy = "^1.23.5"
pandas = "^1.5.3"
hydra-core = "^1.3.2"
joblib = "^1.3.2"
dvc = "^3.38.1"
dvc-gdrive = "^3.0.1"
omegaconf = "^2.3.0"
torch = "^2.1.2"
tensorboard = "^2.15.1"

[tool.poetry.dev-dependencies]
Flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
